<resources>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="flickr_showword">Flickr</string>
    <string name="flickr_no_client">未安装Flickr客户端</string>
    <string name="flickr_content">Flickr只支持图片分享</string>
    <string name="flickr_no_content">请设置分享内容</string>
    <string name="kakao_showword">Kakao Talk</string>
    <string name="kakao_no_client">未安装Kakao Talk客户端</string>
    <string name="kakao_content">Kakao Talk只支持图片、文本分享</string>
    <string name="kakao_no_content">请设置分享内容</string>
    <string name="umeng_socialize_text_laiwang_key">来往</string>
    <string name="umeng_socialize_text_laiwang_dynamic_key">来往动态</string>
    <string name="umeng_socialize_laiwang_default_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能</string>
    <string name="line_showword">LINE</string>
    <string name="line_no_client">未安装Line客户端</string>
    <string name="line_content">Line只支持文本，图片</string>
    <string name="line_no_content">请设置分享内容</string>
    <string name="linkedin_showword">LinkedIn</string>
    <string name="linkedin_no_client">未安装LinkedIn客户端</string>
    <string name="linkedin_content">linked只支持纯文本分享</string>
    <string name="pocket_showword">Pocket</string>
    <string name="pocket_no_client">未安装pocket客户端</string>
    <string name="pocket_content">pocket只支持网页链接分享</string>
    <string name="pull_to_refresh_pull_label">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="umeng_socialize_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_socialize_comment">评论</string>
    <string name="umeng_socialize_comment_detail">评论详情</string>
    <string name="umeng_socialize_back">返回</string>
    <string name="umeng_socialize_near_At">最近@的好友</string>
    <string name="umeng_socialize_friends">关注的好友</string>
    <string name="umeng_socialize_send">发布</string>
    <string name="umeng_socialize_tip_blacklist">对不起，因为违反了用户协议您已被禁言.</string>
    <string name="umeng_socialize_tip_loginfailed">登录失败…</string>
    <string name="umeng_socialize_msg_sec">秒前</string>
    <string name="umeng_socialize_msg_min">分钟前</string>
    <string name="umeng_socialize_msg_hor">小时前</string>
    <string name="umeng_socialize_ucenter_login_title_guide">游客登录</string>
    <string name="umeng_socialize_ucenter_login_title_platform">登录帐号</string>
    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台， （二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。 （三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
    <string name="umeng_socialize_login_qq">QQ空间</string>
    <string name="umeng_socialize_login">登录</string>
    <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
    <string name="umeng_socialize_text_authorize">授权</string>
    <string name="umeng_socialize_text_unauthorize">未授权</string>
    <string name="umeng_socialize_text_ucenter">个人中心</string>
    <string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
    <string name="umeng_socialize_text_comment_hint">说点什么吧…</string>
    <string name="umeng_socialize_text_friend_list">好友列表</string>
    <string name="umeng_socialize_text_visitor">游客</string>
    <string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
    <string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
    <string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
    <string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
    <string name="umeng_socialize_text_waitting">请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin">跳转微信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin_circle">跳转朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin">跳转易信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin_circle">跳转易信朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qq">跳转QQ中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qzone">跳转QZone中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_redirect">跳转</string>
    <string name="umeng_socialize_text_waitting_message">,请稍候...</string>
    <string name="umeng_socialize_text_loading_message">载入中,请稍候...</string>
    <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_renren_key">人人网</string>
    <string name="umeng_socialize_text_douban_key">豆瓣网</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_waitting_share">分享中…</string>
    <string name="umeng_socialize_content_hint">说点啥…</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_send_btn_str">发送</string>
    <string name="umeng_socialize_img_des" />
    <string name="umeng_socialize_share">分享</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="tumblr_showword">Tumblr</string>
    <string name="tumblr_no_client">未安装Tumblr客户端</string>
    <string name="tumblr_content">Tumblr只支持文本，图片，图文分享</string>
    <string name="tumblr_no_content">请设置分享内容</string>
    <string name="whatsapp_showword">WhatsApp</string>
    <string name="whatsapp_no_client">未安装有WhatsApp客户端</string>
    <string name="whatsapp_content">有道云笔记只支持文本，图片</string>
    <string name="whatsapp_no_content">请设置分享内容</string>
    <string name="ynote_showword">有道云笔记</string>
    <string name="ynote_no_client">未安装有道云笔记客户端</string>
    <string name="ynote_content">有道云笔记只支持文本，图片，图文分享</string>
    <string name="ynote_no_content">请设置分享内容</string>
    <string name="app_name">E朝朝</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="userlogin">用户登录</string>
    <string name="login_name">手机号</string>
    <string name="login_pwd">密码</string>
    <string name="login_name_tx_hint">请输入11位手机号</string>
    <string name="login_password_tx_hint">请输入密码</string>
    <string name="login_pwd_tx_hint">请输入不少于6位的数字和字母组合的密码</string>
    <string name="login_login">登 录</string>
    <string name="register_acount">注册账号</string>
    <string name="foget_pwd">忘记密码？</string>
    <string name="userRegister">用户注册</string>
    <string name="user_register_name">帐号</string>
    <string name="user_register_pwd">密码</string>
    <string name="bt_register">注 册</string>
    <string name="bt_verify_code">获取验证码</string>
    <string name="verify_code">验证码</string>
    <string name="items_agree">阅读并同意使用条款</string>
    <string name="user_register_text_name_hint">请输入手机号</string>
    <string name="user_register_text_pwd_hint">请输入不少于6位的数字和字母组合的密码</string>
    <string name="user_register_verify_code">请输入6位验证码</string>
    <string name="defail_no">未填写</string>
    <string name="acunt_name_tv">帐号</string>
    <string name="acunt_name_et">请输入手机号</string>
    <string name="verify_code_tv">验证码</string>
    <string name="verify_code_et">请输入验证码</string>
    <string name="app_name_reget_passwd">密码找回</string>
    <string name="modify_passwd">密码</string>
    <string name="modify_passwd_hint">请输入不少于6位的数字和字母组合的密码</string>
    <string name="bt_next">下 一 步</string>
    <string name="bt_confirm">确认</string>
    <string name="acunt_name">账号</string>
    <string name="main">探知职业潜能</string>
    <string name="find_find">让工作来找我</string>
    <string name="look_look">就业那些事儿</string>
    <string name="me">我</string>
    <string name="shooppin_can">我能兑换的</string>
    <string name="shooppin_price">价格由低到高</string>
    <string name="shooppin_new">新品优先</string>
    <string name="start_school_time">入学时间:</string>
    <string name="end_school_time">毕业时间:</string>
    <string name="school_name">所在院校:</string>
    <string name="department_name">所在院系:</string>
    <string name="major_name">所学专业:</string>
    <string name="university_degre">学历:</string>
    <string name="adapter_title_school">北大</string>
    <string name="adapter_department">信息工程学院</string>
    <string name="adapter_major">电子信息工程</string>
    <string name="adapter_degree">本科</string>
    <string name="adapter_school_start">2009–09</string>
    <string name="adapter_school_line">—</string>
    <string name="adapter_school_end">2013–6</string>
    <string name="work_start_time">开始日期:</string>
    <string name="work_end_time">结束日期:</string>
    <string name="work_company_name">公司名称:</string>
    <string name="industry_name">行 业:</string>
    <string name="show_major_name">职 位:</string>
    <string name="exeprice_work_des">工作描述:</string>
    <string name="search_pop_img">箭头</string>
    <string name="search_pop_position">职位</string>
    <string name="search_pop_type">职位类型</string>
    <string name="search_pop_full">全职</string>
    <string name="search_pop_part">兼职</string>
    <string name="search_pop_shixi">实习</string>
    <string name="search_pop_hope_city">期望工作城市</string>
    <string name="search_pop_hope_salary">期望薪资</string>
    <string name="search_pop_queren">确认</string>
    <string name="search_pop_hint">请输入关键字</string>
    <string name="search_pop_choice">筛选</string>
    <string name="search_pop_order">排序</string>
</resources>