<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/schoolbackground" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/tv_gerenxinxi_sp" android:textColor="@color/tv_leixing_item" android:id="@id/tv_school" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:paddingBottom="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adapter_title_school" android:layout_centerVertical="true" />
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_detailinfor" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_below="@id/tv_school">
        <TextView android:id="@id/tv_department" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/adapter_department" android:layout_weight="1.0" />
        <TextView android:id="@id/tv_major" android:paddingLeft="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/adapter_major" android:layout_weight="1.0" />
        <TextView android:id="@id/tv_degree" android:paddingLeft="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/adapter_degree" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_school_time" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_below="@id/ll_detailinfor">
        <TextView android:id="@id/tv_school_start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adapter_school_start" />
        <TextView android:id="@id/tv_school_line" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adapter_school_line" />
        <TextView android:id="@id/tv_school_end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adapter_school_end" />
    </LinearLayout>
    <include layout="@layout/layout_line_view" />
</RelativeLayout>