<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/rl_position" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="1.0dip">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/search_pop_position" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:id="@id/tv_position" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="30.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/ico_arrow" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/search_pop_img" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/rl_post_type" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="1.0dip">
        <TextView android:id="@id/tv_pop_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/search_pop_type" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_toRightOf="@id/tv_pop_type" android:layout_centerVertical="true">
            <RadioGroup android:orientation="horizontal" android:id="@id/group_choice" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_marginTop="1.0dip" android:layout_weight="4.0">
                <RadioButton android:textColor="@color/key_tv_col" android:id="@id/full_time" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/search_pop_full" android:layout_weight="1.0" />
                <TextView android:background="#fff0f0f0" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" />
                <RadioButton android:textColor="@color/key_tv_col" android:id="@id/part_time" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/search_pop_part" android:layout_weight="1.0" />
                <TextView android:background="#fff0f0f0" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" />
                <RadioButton android:textColor="@color/key_tv_col" android:id="@id/internship" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/search_pop_shixi" android:layout_weight="1.0" />
            </RadioGroup>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout android:id="@id/rl_hope_city" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="1.0dip">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/search_pop_hope_city" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:id="@id/tv_hope_city" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="30.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/ico_arrow" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/search_pop_img" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/rl_hope_salary" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="1.0dip">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/search_pop_hope_salary" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:id="@id/tv_hope_salary" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="30.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/ico_arrow" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/search_pop_img" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="1.0dip">
        <Button android:id="@id/bt_more_ok" android:background="@drawable/mid_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search_pop_queren" android:layout_centerInParent="true" />
    </RelativeLayout>
</LinearLayout>