<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_weight="1.0" android:layout_marginStart="20.0dip">
        <TextView android:textSize="14.0sp" android:textColor="@color/black_realy" android:id="@id/tv_school_time_start_item1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_school_time" />
        <TextView android:textSize="14.0sp" android:textColor="@color/black_realy" android:id="@id/tv_school_time_end_item1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/end_school_time" />
        <TextView android:textSize="14.0sp" android:textColor="@color/black_realy" android:id="@id/tv_school_name_item1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/school_name" />
        <TextView android:textSize="14.0sp" android:textColor="@color/black_realy" android:id="@id/tv_school_department_item1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/department_name" />
        <TextView android:textSize="14.0sp" android:textColor="@color/black_realy" android:id="@id/tv_school_major_item1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/major_name" />
        <TextView android:textSize="14.0sp" android:textColor="@color/black_realy" android:id="@id/tv_school_degree_item1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/university_degre" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="3.0">
        <TextView android:textSize="14.0sp" android:textColor="@color/gray_light" android:id="@id/tv_school_time_start_item" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textSize="14.0sp" android:textColor="@color/gray_light" android:id="@id/tv_school_time_end_item" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" />
        <TextView android:textSize="14.0sp" android:textColor="@color/gray_light" android:ellipsize="end" android:id="@id/tv_school_name_item" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:singleLine="true" />
        <TextView android:textSize="14.0sp" android:textColor="@color/gray_light" android:ellipsize="end" android:id="@id/tv_school_department_item" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:singleLine="true" />
        <TextView android:textSize="14.0sp" android:textColor="@color/gray_light" android:ellipsize="end" android:id="@id/tv_school_major_item" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:singleLine="true" />
        <TextView android:textSize="14.0sp" android:textColor="@color/gray_light" android:id="@id/tv_school_degree_item" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" />
    </LinearLayout>
</LinearLayout>